Adding some more functionality

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                     <input class="weight" type="text" placeholder="Enter your weight">
                 </div>
                 <button>Result</button>
-                <div class="msg"> </div>
+                <div class="msgContainer">
+                    <p class="msg"></p>
+                </div>
             </form>
 
         </div>
